Fix Contact message field not responsive on phone sized devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -388,7 +388,7 @@ footer {
         display: block;
         width: 100%;
     }
-    #form-email {
+    #form-email, #form-message {
         width: 100%;
     }
 }
